--- a/src/app/container/header/header.component.html
+++ b/src/app/container/header/header.component.html
@@ -1,4 +1,5 @@
 <div class="header">
+  <button (click)="changeFlower()" [ngClass]="{'flowerShow': preFlower}">Flower Show</button>
   <button (click)="download()" title="download">Download</button>
   <button (click)="share()"  title="share">Share</button>
   <a href="https://github.com/lanyj/storm-designer#visualizing-examples" class="examples">Examples</a>
