--- a/src/app/creation-menu/creation-menu.component.scss
+++ b/src/app/creation-menu/creation-menu.component.scss
@@ -3,23 +3,23 @@
 }
 
 :host{
-  .overlay{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: rgba(0,0,0,0.05);
-    z-index: 4;
-  }
-  @keyframes slideUp {
-    from {height: 0%;overflow-y: hidden;}
-    to {height: 61%;overflow-y: hidden;}
-  }
+  // .overlay{
+  //   position: fixed;
+  //   width: 100%;
+  //   height: 100%;
+  //   left: 0;
+  //   top: 0;
+  //   background: rgba(0,0,0,0.05);
+  //   z-index: 4;
+  // }
+  // @keyframes slideUp {
+  //   from {height: 0%;overflow-y: hidden;}
+  //   to {height: 61%;overflow-y: hidden;}
+  // }
   .operators-container {
-    height: 61%;
-    animation-name: slideUp;
-    animation-duration: 0.3s;
+    height: 15%;
+    // animation-name: slideUp;
+    // animation-duration: 0.3s;
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -36,9 +36,9 @@
         margin: -7px;
         font-weight: 100;
         font-size: 0.9rem;
-        color: #bdbdbd;
+        color: #ff0000;
         text-align: center;
-        padding: 0;
+        padding: 5px;
       }
       .operatorOption {
         color: #404040;
@@ -52,7 +52,7 @@
           color: blue;
         }
         &.hot{
-          color: red;
+          color: blue;
         }
         &:hover{
           background: rgba(0, 0, 0, 0.07);
@@ -69,7 +69,3 @@
     }
   }
 }
-
-
-
-
